--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/PasswordDialog.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/PasswordDialog.xaml
@@ -6,24 +6,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-   
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+  >
 <UserControl.Resources>
     
-            <ResourceDictionary
-            Source="/Styles/InUse/DialogStyles.xaml" />
+            <ResourceDictionary  Source="/Styles/InUse/DialogStyles.xaml" />
       
     </UserControl.Resources>
     <Grid  Background="LightGray">
-        <Border x:Name="DialogBorder" Padding="10">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0" />
-                    <ColumnDefinition Width="100*" />
-                </Grid.ColumnDefinitions>
-                <Grid x:Name="SymbolCol" Grid.Column="0" />
-                <Grid x:Name="MainCol" Grid.Column="1">
+        <Border x:Name="DialogBorder" Padding="10" BorderThickness="3" BorderBrush="Yellow">
+                <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
@@ -31,7 +22,7 @@
                     <Grid x:Name="ContentRow" Grid.Row="0">
                         <StackPanel HorizontalAlignment="Stretch">
                             <TextBlock Style="{StaticResource DialogH1Style}" Text="{x:Bind _viewModel.Title}" />
-                            <Grid Width="400">
+                            <Grid Width="Auto">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition />
@@ -73,7 +64,6 @@
                     </Grid>
                 </Grid>
 
-            </Grid>
         </Border>
     </Grid>
 </UserControl>
