--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/PlainTextBar.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/PlainTextBar.xaml
@@ -8,37 +8,21 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.Resources>
-        <ResourceDictionary
-            Source="/Styles/InUse/BarStyles.xaml" />
+        <ResourceDictionary Source="/Styles/InUse/BarStyles.xaml" />
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Text="{x:Bind _viewModel.StatusBarModel.StatusBarText, Mode=OneWay}" />
-        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            <TextBlock>
-                <Hyperlink Click="Hyperlink_SetPassword_Click">
-                    <Run
-                        Text="{x:Bind _viewModel.PasswordInfo.PasswordStatus, Mode=OneWay}" />
-                </Hyperlink>
-                    <Hyperlink FontWeight="Normal" FontFamily="WebDings" Click="Hyperlink_ClearPassword_MouseDown"
-                               Foreground="{x:Bind _viewModel.PasswordInfo.IsPasswordSet, Mode=OneWay, Converter={StaticResource EnabledToBrush}}">
-                        r
-                    </Hyperlink>
-            </TextBlock>
+        <StackPanel Grid.Column="0" Orientation="Vertical" Margin="10,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <TextBlock Text="{x:Bind _viewModel.FileModel.ShortFilename, Mode=OneWay}" FontSize="11" Foreground="White" />
+            <TextBlock Text="{x:Bind _viewModel.StatusBarModel.StatusBarText, Mode=OneWay}" Foreground="White" FontSize="11" />
         </StackPanel>
-        <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <TextBlock>
-                <Hyperlink Click="Hyperlink_Encrypt_Click"><Run Text="{x:Bind _viewModel.ResourceWrapper.termEncrypt}" /> </Hyperlink>
-                
-                <Hyperlink Click="Hyperlink_Decrypt_Click"><Run x:Uid="termDecrypt" /> </Hyperlink>
-               
-                <Hyperlink Click="Hyperlink_Save_Click" Foreground="{x:Bind _viewModel.FileModel.IsDirty, Mode=OneWay, Converter={StaticResource EnabledToBrush}}">
-                    <Run x:Uid="termSave"  /> </Hyperlink>
-            </TextBlock>
+        <StackPanel Grid.Column="1"  Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,45,0" VerticalAlignment="Top">
+            <Button Style="{StaticResource myButton}" HorizontalAlignment="Right" Click="Hyperlink_SetPassword_Click" Foreground="White" Content="{x:Bind _viewModel.PasswordInfo.PasswordStatus, Mode=OneWay}" FontSize="15" BorderThickness="0" Background="Transparent"/>
+            <Button Style="{StaticResource myButton}" HorizontalAlignment="Right"  FontWeight="Normal" FontFamily="WebDings" Foreground="White" Click="Hyperlink_ClearPassword_MouseDown"
+                               Visibility="{x:Bind _viewModel.PasswordInfo.IsPasswordSet, Mode=OneWay, Converter={StaticResource BoolVisibility}}" Content="r" FontSize="15" BorderThickness="0" Background="Transparent"/>
         </StackPanel>
     </Grid>
 </UserControl>
