--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/Pages/MainPagePhone.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/Pages/MainPagePhone.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="VisualCrypt.Windows.Pages.MainPage"
+    x:Class="VisualCrypt.Windows.Pages.MainPagePhone"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,12 +7,14 @@
     xmlns:controls="using:VisualCrypt.Windows.Controls"
     NavigationCacheMode="Disabled"
     xmlns:local="using:VisualCrypt.Windows.Controls"
+    d:DesignHeight="800"
+    d:DesignWidth="480"
     mc:Ignorable="d">
     <Page.Resources>
         <ResourceDictionary Source="/Styles/InUse/BarStyles.xaml" />
     </Page.Resources>
     <Page.TopAppBar>
-        <local:CommandBar2 Style="{StaticResource myCommandBar}" Opacity="1.0" IsOpen="false" IsSticky="false"  x:Name="TopBar" HorizontalAlignment="Left" HorizontalContentAlignment="Left" Background="{StaticResource AccentColorBrush}">
+        <local:CommandBar2 Style="{StaticResource myCommandBar}" Opacity="1" IsOpen="false" IsSticky="false"  x:Name="TopBar" HorizontalAlignment="Left" HorizontalContentAlignment="Left" Background="{StaticResource AccentColorBrush}">
             <local:AppBarButton2 Style="{StaticResource myAppBarButton}" HorizontalAlignment="Left" Label="Back" Command="{x:Bind _viewModel.GoBackToFilesCommand}" Icon="Back" Foreground="White" Width="48" />
             <local:AppBarButton2 Style="{StaticResource myAppBarButton}" Label="Save" Command="{x:Bind _viewModel.SaveCommand}" Icon="Save" Foreground="White" Width="48" />
             <local:AppBarButton2 Style="{StaticResource myAppBarButton}" Label="Share" Command="{x:Bind _viewModel.SaveCommand}" Icon="Send" Foreground="White" Width="48" />
@@ -40,16 +42,16 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Height="40" Background="{StaticResource AccentColorBrush}" 
-               >
+        <Border Grid.Row="0" Background="{StaticResource AccentColorBrush}">
             <StackPanel>
-                <controls:PlainTextBar
+                <controls:PlainTextBarPhoneTop
                     Visibility="{x:Bind _viewModel.StatusBarModel.IsPlaintextBarVisible, Mode=OneWay, Converter={StaticResource BoolVisibility}}" />
                 <controls:WorkingBarPhone
                     Visibility="{x:Bind _viewModel.StatusBarModel.IsProgressBarVisible, Mode=OneWay,Converter={StaticResource BoolVisibility}}" />
-                <controls:EncryptedBar
+                <controls:EncryptedBarPhoneTop
                     Visibility="{x:Bind _viewModel.StatusBarModel.IsEncryptedBarVisible, Mode=OneWay,Converter={StaticResource BoolVisibility}}" />
             </StackPanel>
         </Border>
@@ -58,8 +60,15 @@
         <controls:EditorUserControl Grid.Row="1"
                                     VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
                                     VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
+        <Border Grid.Row="2" Background="{StaticResource AccentColorBrush}">
+            <StackPanel>
+                <controls:PlainTextBarPhoneBottom
+                    Visibility="{x:Bind _viewModel.StatusBarModel.IsPlaintextBarVisible, Mode=OneWay, Converter={StaticResource BoolVisibility}}" />
+                <controls:EncryptedBarPhoneBottom
+                    Visibility="{x:Bind _viewModel.StatusBarModel.IsEncryptedBarVisible, Mode=OneWay,Converter={StaticResource BoolVisibility}}" />
+            </StackPanel>
+        </Border>
 
-      
     </Grid>
    
 </Page>
